light dark theme added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
           <div class="logo">
             <h2><span>Siddhant</span></h2>
           </div>
+          <div class="switch-container">
+            <span class="switch-label" style="color: black;"><i class="fa-solid fa-moon"></i>Theme</span>
+            <span class="switch-btn"></span>
+          </div>
+          <script src="toggle.js"></script>
           <ul>
             <li><a href="#aboutme">About Me</a></li>
             <li><a href="#skills">Skills</a></li>
