Added javascript improvements to home page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <div class="logo">
             <h2><span>Siddhant</span></h2>
           </div>
+          <script src="logo.js"></script>
           <div class="switch-container">
             <span class="switch-label" style="color: black;"><i class="fa-solid fa-moon"></i>Theme</span>
             <span class="switch-btn"></span>
