File names corrected

--- a/customdialog.html
+++ b/customdialog.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main>
-      <script type="module" src="customdialogs.js"></script>
+      <script type="module" src="customdialog.js"></script>
       <script src="purify.js"></script>
       <dialog id="alert">
         <h1>Alert pressed!</h1>
