--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <li><a href="nativedialogs.html">Part 1</a></li>
             <li><a href="customdialog.html">Part 2</a></li>
             <li><a href="crud.html">Part 3</a></li>
-            <li><a href="stylecrud.html">Part 4</a></li>
+            <li><a href="styledcrud.html">Part 4</a></li>
           </ul>
         </nav>
       </div>
