put button added

--- a/methodtest.html
+++ b/methodtest.html
@@ -55,6 +55,12 @@
                 event.preventDefault();
                 getData();
             });
+
+            const putButton = document.getElementById("put_button");
+            putButton.addEventListener("click", function(event) {
+                event.preventDefault();
+                putData();
+            });
           </script>
     </body>
 </html>
