--- a/methodtest.html
+++ b/methodtest.html
@@ -61,6 +61,12 @@
                 event.preventDefault();
                 putData();
             });
+
+            const deleteButton = document.getElementById("delete_button");
+            deleteButton.addEventListener("click", function(event) {
+                event.preventDefault();
+                deleteData();
+            })
           </script>
     </body>
 </html>
