--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <li><a href="#container">Work Experience</a></li>
             <li><a href="">Contact</a></li>
             <li><a href="#HW4">HW4</a></li>
+            <li><a href="methodtest.html">HW5</a></li>
           </ul>
           <div id="hamburger">
             <div class="small"></div>
