--- a/methodtest.html
+++ b/methodtest.html
@@ -1,3 +1,4 @@
+<!-- Change application/JSON in content-type to x-www-form-urlencoded in JS file -->
 <!DOCTYPE html>
 <html>
     <head>
@@ -31,7 +32,7 @@
                 document.addEventListener("DOMContentLoaded", function(event) {
                     let today_date = new Date().toLocaleString();
                     document.getElementById("article_date").value = today_date;
-                })
+                });
             </script>
             <br> <br>
             <div class="form-buttons">
@@ -70,7 +71,7 @@
             deleteButton.addEventListener("click", function(event) {
                 event.preventDefault();
                 deleteData();
-            })
+            });
           </script>
     </body>
 </html>
