--- a/webcomponent.html
+++ b/webcomponent.html
@@ -12,6 +12,8 @@
         <h1 style="text-align: center;">HW 5 Part 2</h1>
         <hr>
         <script src="ButtonCount.js"></script>
-        <button-count></button-count>
+        <div style="text-align: center;">
+            <button-count></button-count>
+        </div>
     </body>
 </html>
