Added to portfolio

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="#container">Work Experience</a></li>
             <li><a href="">Contact</a></li>
             <li><a href="#HW4">HW4</a></li>
-            <li><a href="methodtest.html">HW5</a></li>
+            <li><a href="#HW5">HW5</a></li>
           </ul>
           <div id="hamburger">
             <div class="small"></div>
@@ -260,6 +260,18 @@
             <li><a href="customdialog.html">Part 2</a></li>
             <li><a href="crud.html">Part 3</a></li>
             <li><a href="styledcrud.html">Part 4</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div id="HW5">
+        <section>
+          <h1>HW5</h1>
+        </section>
+        <nav class="navbar_2">
+          <ul>
+            <li><a href="methodtest.html">Part 1</a></li>
+            <li><a href="webcomponent.html">Part 2</a></li>
           </ul>
         </nav>
       </div>
